src/test/deca/context/invalid/provided/object_in_boolean_condition_error.deca
// Description:
//    Une condition utilise un objet au lieu d’un booléen.
//
// Résultats:
//    object_in_boolean_condition_error.deca:16:12: The type of the condition must be boolean
//
// Historique:
//    créé le 19/01/2025
class A {
    int field = 10;
}

class B {
    void test() {
        A obj = new A();
        if (obj) { 
            print("Condition vérifiée.");
        }
    }
}
